# incident-commander-openenv

./: .dockerignore  .gitattributes  .gitignore  Blog.md  CODEBASE_CONTEXT.md  Dockerfile  README.md  client.py  decisions.md  docker-compose.yml  downloaded_screen.html  evaluate.py  evaluate_trained.py  how_to_train.md  incident_commander_training.ipynb  inference.py  live_inference.py  model_training.ipynb  models.py  multi_agent_inference.py  nginx.conf  openenv.yaml  orchestrator.py  plot_baselines.py  pyproject.toml  run_baselines.py  sft_warmstart.py  supervisord.conf  train_grpo.py
frontend_app/: Dockerfile  package-lock.json  package.json
frontend_app/src/app/: globals.css  layout.tsx  page.tsx
frontend_app/src/components/: ActivityLog.tsx  ChaosToast.tsx  Header.tsx  IncidentSummaryCard.tsx  InsightDock.tsx  MetricsGauges.tsx  Performance.tsx  PerformanceModal.tsx  PerformanceTrend.tsx  RunbookModal.tsx  ServiceMap.tsx  Sidebar.tsx  Spinner.tsx
frontend_app/src/hooks/: useEnvironment.ts
results/: baseline_rewards.json  evaluation_results.json  sft_dataset.json  training_log.json
scripts/: deploy_to_hf.sh  docker-verify.sh
server/: app.py  chaos.py  environment.py  services.py  tasks.py
tests/: test_edge_cases.py  test_environment.py  test_weakness_fixes.py
