[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-commander-env"
version = "1.0.0"
description = "An OpenEnv-compliant RL environment for production incident response simulation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Incident Commander Team"},
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
train = [
    "trl>=0.15.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "peft>=0.14.0",
    "bitsandbytes>=0.45.0",
    "datasets>=3.0.0",
    "torch>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
